<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amanda</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">private</string>
    
    <!-- 主页 -->
    <string name="mood_title">心情</string>
    <string name="empty_mood">还没有心情，赶紧去发表吧</string>
    <string name="empty_blog">还没有日志，去写一篇吧</string>
    <string name="publish">发布</string>
    
    <!-- 写心情 -->
     <string name="mood_write">写心情</string>
     <string name="mood_content_hint">请输入心情内容</string>
     <string name="post_mood">发布心情</string>
    
    <!-- 写日志 -->
    <string name="blog_write">写日志</string>
    <string name="title_content_cannot_empty">标题或者内容不能为空</string>
    <string name="hint_blog_title">日志标题</string>
    
    <!-- 设置 -->
    <string name="setting_header">设置</string>
    <string name="set_password_notice">提示：请输入新密码，然后按确定键</string>
    <string name="set_password_verify_notice">提示：请再次输入新密码，然后按确定键</string>
    <string name="set_password">密码设置</string>
    
    <!-- 公共 -->
    <string name="posting">正在提交中</string>
    <string name="post_success">提交成功</string>
    <string name="update_success">更新成功</string>
    <string name="post_fail">提交失败</string>
    <string name="no_more">没有更多了</string>
    <string name="content_clear">清除内容</string>
    <string name="content_cannot_empty">内容不能为空</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="clear">清除</string>
    
	<!-- 长按menu菜单 -->
    <string name="share">分享</string>
    <string name="delete">删除</string>
     <string name="update">修改</string>
    <string name="edit">编辑</string>
    <string name="copy">复制</string>
    
	<!-- 主页面菜单 -->
	<string name="importt">导入</string>
	<string name="export">导出</string>
	<string name="setting">设置</string>
	<string name="exit">退出</string>

</resources>
