<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/widget_head_bg"
        android:orientation="horizontal" >

        <TextView
            style="@style/detail_head_title"
            android:text="@string/set_password" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/notice"
        style="@style/set_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_notice" />

    <com.sinaapp.whutec.amanda.widget.LocusPassWordView
        android:id="@+id/locus_password_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingTop="10dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancle"
            style="@style/set_password_button"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/clear"
            style="@style/set_password_button"
            android:text="@string/clear" />

        <Button
            android:id="@+id/next"
            style="@style/set_password_button"
            android:layout_marginRight="10dip"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>